--- a/exampleconfig.ini
+++ b/exampleconfig.ini
@@ -10,4 +10,4 @@ usedpostsdirectory = C:\Users\USER\Downloads\redditapp\usedposts.txt
 staticvideodirectory = C:\Users\USER\Downloads\redditapp\static3.mp4
 outrodirectory = C:\Users\USER\Downloads\redditapp\outro.mp4
 rawfootagedirectory = C:\Users\USER\Videos\gameplay\
-
+postlimit = 7
